--- a/gameover.html
+++ b/gameover.html
@@ -25,6 +25,6 @@
 <body>
 	<h1>Робот потерялся на марсе!</h1>
 	<p>Роботу не удалось найти дорогу , попробуй начать заново.</p>
-	<a href="index1.html">Вернуться назад</a>
+	<a href="index.html">Вернуться назад</a>
 </body>
 </html>
